# InvesticWorkshop

./: Makefile  README.md  pyproject.toml
Python_for_Investing_101/: 01_Create_Moving_Average.ipynb  02_Create_SMA_Bollinger_Band.ipynb  03_Create_MACD_strategy.ipynb  04_Create_RSI_strategy.ipynb  05_MACD_parameter_tuning.ipynb  07_What_is_your_position_size.ipynb  08_Backtest_your_mpt_portfolio.ipynb  09_Screening_with_Technical_analysis.ipynb  10_Screening_with_Fundamental.ipynb
Python_for_Investing_Beginner/: 01_Import_Export_data.ipynb  02_Price_Condition.ipynb  03_SMA_Cross_Over.ipynb  04_SMA_2SD_Bollinger_Bands.ipynb  05_CDC_Action_Zone.ipynb  Import_Export_data.ipynb  SMA_Cross_Over.ipynb
Python_for_Investing_Beginner/data/: export_tesla.csv  export_tesla.xlsx  tesla.csv
Python_for_Quantitative/: 01_Market_Anomaly.ipynb  04_Student_t_Lognormal.ipynb  07_MACD_Quadrant.ipynb
Python_for_Quantitative/data/: SET_Data_from1970-2021.csv
Python_for_Technical_Analysis/: 01_RSI_Strategy_show_signal_with_mplfinance.ipynb  02_Create_Backtesting_Function.ipynb  03_CandleSitck_Pattern.ipynb  04_MACD_Parameter_tuning.ipynb
Time_Series_Beginner/: 01_Basic_Operation.ipynb
