[tool.poetry]
name = "investicworkshop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
pandas = "^1.5.3"
numpy = ">=1.18,<1.24"
pandas-ta = "^0.3.14b0"
vectorbt = "^0.24.5"
tvdatafeed = {git = "https://github.com/StreamAlpha/tvdatafeed.git"}
debugpy = "1.4.1"
ipykernel = "^6.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
